homelab/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  annotations:
    argocd.argoproj.io/sync-wave: "25"
  labels:
    app: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: audiobookshelf
      annotations:
        backup.velero.io/backup-volumes-excludes: audiobooks
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 30
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 30
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.37.0@sha256:6432d1dc58951b0280b29144ffc69834a8ae02786a2126f6b7c9bd453801c78b
          ports:
            - name: http
              containerPort: 13378
          volumeMounts:
            - name: data
              mountPath: /config
              subPath: config
            - name: data
              mountPath: /metadata
              subPath: metadata
            - name: audiobooks
              mountPath: /audiobooks
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 2000m
              memory: 1Gi
          startupProbe:
            httpGet:
              path: /ping
              port: http
            failureThreshold: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            failureThreshold: 3

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: audiobookshelf-data-local
        - name: audiobooks
          persistentVolumeClaim:
            claimName: audiobookshelf-audiobooks
