homelab/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  labels:
    app: audiobookshelf
spec:
  selector:
    app: audiobookshelf
  ports:
    - name: http
      port: 80
      targetPort: 13378
